--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@capacitor/android": "^8.0.1",
     "@capacitor/cli": "^7.4.5",
     "@capacitor/core": "^8.0.1",
+    "@lottiefiles/dotlottie-react": "^0.17.13",
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
     "framer-motion": "^12.28.1",
