--- a/client/capacitor.config.json
+++ b/client/capacitor.config.json
@@ -4,6 +4,7 @@
   "webDir": "dist",
   "bundledWebRuntime": false,
   "server": {
-    "cleartext": true
+    "cleartext": true,
+    "androidScheme": "https"
   }
 }
